--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+import com.revolutan.exchange.Configration
 
 buildscript {
     ext.kotlin_version = '1.3.30'
@@ -8,8 +9,8 @@ buildscript {
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.1'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath Configration.ClassPath.gradle
+        classpath Configration.ClassPath.kotlinGradle
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -19,7 +20,7 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+        maven { url Configration.RepositoriesURL.jitpack }
     }
 }
 
