--- a/Data/build.gradle
+++ b/Data/build.gradle
@@ -11,8 +11,10 @@ dependencies {
 
     implementation Libraries.Kotlin.kotlinStdlib
     implementation Libraries.RX.rxKotlin
+    implementation Libraries.RX.rxJava
 
-//    testImplementation dataTestDependencies.junit
+    testImplementation Libraries.Testing.junit
+    testImplementation Libraries.Testing.mockito
 //    testImplementation dataTestDependencies.kotlinJUnit
 //    testImplementation dataTestDependencies.mockito
 //    testImplementation dataTestDependencies.assertj
