--- a/Remote/build.gradle
+++ b/Remote/build.gradle
@@ -20,7 +20,7 @@ dependencies {
     implementation Libraries.Network.okhttpMockServer
 
     implementation Libraries.Koin.koin
-    implementation Libraries.Koin.koinViewModel
+    implementation Libraries.Koin.koinTest
 
     testImplementation Libraries.Testing.junit
     testImplementation Libraries.Testing.mockito
