create main activity and check the interaction between activity and View model create Get Currencies usecase and add Single observable use case

--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -44,8 +44,12 @@ dependencies {
 
     implementation Libraries.Koin.koin
     implementation Libraries.Koin.koinViewModel
-    
+
     implementation Libraries.Koin.koinTest
+
+    testImplementation Libraries.Testing.junit
+    testImplementation Libraries.Testing.mockito
+    testImplementation Libraries.AndroidXSupport.lifecycleTest
 
 }
 repositories {
