--- a/Data/build.gradle
+++ b/Data/build.gradle
@@ -12,12 +12,10 @@ dependencies {
     implementation Libraries.Kotlin.kotlinStdlib
     implementation Libraries.RX.rxKotlin
     implementation Libraries.RX.rxJava
+    implementation Libraries.Koin.koin
 
     testImplementation Libraries.Testing.junit
     testImplementation Libraries.Testing.mockito
-//    testImplementation dataTestDependencies.kotlinJUnit
-//    testImplementation dataTestDependencies.mockito
-//    testImplementation dataTestDependencies.assertj
 
 }
 
