--- a/Domain/build.gradle
+++ b/Domain/build.gradle
@@ -8,6 +8,10 @@ dependencies {
     implementation Libraries.RX.rxJava
     implementation Libraries.Kotlin.kotlinStdlib
 
+    implementation Libraries.Koin.koin
+    implementation Libraries.Koin.koinTest
+
+
     testImplementation Libraries.Testing.junit
     testImplementation Libraries.Testing.mockito
 
