--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,7 @@
+import com.revolutan.exchange.Libraries
+import com.revolutan.exchange.Modules
+import com.revolutan.exchange.Configration
+
 apply plugin: 'com.android.application'
 
 apply plugin: 'kotlin-android'
@@ -5,13 +9,13 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion Configration.Android.compileSdk
     defaultConfig {
-        applicationId "com.revolutan.exchange"
-        minSdkVersion 21
-        targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
+        applicationId Configration.Android.applicationId
+        minSdkVersion Configration.Android.mindSdk
+        targetSdkVersion Configration.Android.targetSdk
+        versionCode Configration.Android.versionCode
+        versionName Configration.Android.versionName
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -24,10 +28,25 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.0.2'
-    implementation 'androidx.core:core-ktx:1.0.2'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+
+    implementation project(Modules.presentation)
+    implementation project(Modules.data)
+    implementation project(Modules.remote)
+    implementation project(Modules.domain)
+
+
+    implementation Libraries.Kotlin.kotlinStdlib
+    implementation Libraries.AndroidXSupport.appcompat
+    implementation Libraries.AndroidXSupport.coreKTX
+    implementation Libraries.AndroidXSupport.constraintLayout
+    implementation Libraries.AndroidXSupport.material
+
+    implementation Libraries.RX.rxAndroid
+    implementation Libraries.Koin.koin
+
+
+
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
